--- a/vagrant/vagrant-image/Vagrantfile
+++ b/vagrant/vagrant-image/Vagrantfile
@@ -18,7 +18,7 @@ Vagrant.configure("2") do |config|
       machine.vm.box_check_update = false
 
       #### needs to install: vagrant plugin install vagrant-disksize
-      config.disksize.size = "10GB"
+      # config.disksize.size = "10GB"
 
       machine.vm.hostname = "#{name}-#{i}"
       machine.vm.network "private_network", ip: "#{ip_prefix}.#{i}"
