--- a/vagrant/vagrant-image/Vagrantfile
+++ b/vagrant/vagrant-image/Vagrantfile
@@ -3,11 +3,11 @@
 
 Vagrant.configure("2") do |config|
 
-  box = "ubuntu/xenial64"
+  box = "ubuntu/cosmic64"
   name = "vm"
   domain = "io"
-  memory = "512"
-  cpus = "2"
+  memory = "1024"
+  cpus = "4"
   ip_prefix = "192.168.33"
   machines = *(11..11)
 
@@ -23,13 +23,13 @@ Vagrant.configure("2") do |config|
       machine.vm.hostname = "#{name}-#{i}"
       machine.vm.network "private_network", ip: "#{ip_prefix}.#{i}"
 
-      config.vm.network :forwarded_port, guest: 22, host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true
+      config.vm.network :forwarded_port, guest: 22, guest_ip: "0.0.0.0", host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true
 
       # uncomment if using incrementing port numbers
       # config.vm.network :forwarded_port, guest: "220#{i}", host: "220#{i}", host_ip: "0.0.0.0", auto_correct: true
+      # config.vm.network :forwarded_port, guest: "4222", host: "422#{i}", host_ip: "0.0.0.0", auto_correct: true
 
       config.ssh.username = "vagrant"
-
       machine.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/id_rsa.pub"
       machine.vm.provision "shell", inline: "cat ~vagrant/.ssh/id_rsa.pub >> ~vagrant/.ssh/authorized_keys"
 
@@ -43,12 +43,16 @@ Vagrant.configure("2") do |config|
       #### Uncomment the shell scripts after the machine is up
       #### and use: vagrant up --provision
 
-      machine.vm.provision "shell", path: "tools/packages.sh"
+      # machine.vm.provision "shell", path: "tools/packages.sh"
+      # machine.vm.provision "shell", path: "tools/golang.sh"
+      # machine.vm.provision "shell", path: "tools/nodejs.sh"
+      # machine.vm.provision "shell", path: "tools/k6.sh"
       # machine.vm.provision "shell", path: "tools/docker.sh"
       # machine.vm.provision "shell", path: "tools/docker-compose.sh"
       # machine.vm.provision "shell", path: "tools/cloudfoundry.sh"
       # machine.vm.provision "shell", path: "tools/openshift.sh"
       # machine.vm.provision "shell", path: "tools/golang.v1.sh", privileged: false
+      # machine.vm.provision "shell", path: "tools/golang.v2.sh", privileged: true
       # machine.vm.provision "shell", path: "tools/nomad-agent.sh"
       # machine.vm.provision "shell", path: "tools/nomad.sh"
       # machine.vm.provision "shell", path: "tools/consul.sh"
