--- a/vagrant/vagrant-image/Vagrantfile
+++ b/vagrant/vagrant-image/Vagrantfile
@@ -24,11 +24,13 @@ Vagrant.configure("2") do |config|
       machine.vm.network "private_network", ip: "#{ip_prefix}.#{i}"
 
       config.vm.network :forwarded_port, guest: 22, guest_ip: "0.0.0.0", host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true
+      config.vm.network :forwarded_port, guest: 5432, guest_ip: "0.0.0.0", host: 5432, host_ip: "0.0.0.0", id: "postgres", auto_correct: true
 
       # uncomment if using incrementing port numbers
       # config.vm.network :forwarded_port, guest: "220#{i}", host: "220#{i}", host_ip: "0.0.0.0", auto_correct: true
       # config.vm.network :forwarded_port, guest: "4222", host: "422#{i}", host_ip: "0.0.0.0", auto_correct: true
       # config.vm.network :forwarded_port, guest: "4222", host: "422#{i}", host_ip: "0.0.0.0", auto_correct: true
+
 
       config.ssh.username = "vagrant"
       machine.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/id_rsa.pub"
