--- a/vagrant/vagrant-image/config/bash.conf
+++ b/vagrant/vagrant-image/config/bash.conf
@@ -117,6 +117,9 @@ if ! shopt -oq posix; then
 fi
 
 # used if Go is installed
-#export PATH=$PATH:/usr/local/go/bin
 #export GOPATH=$HOME/.go
 #export GOBIN=$GOPATH/bin
+#export PATH=$PATH:/usr/local/go/bin:$GOBIN
+
+# used if Rust is installed
+#source $HOME/.cargo/env
