--- a/vagrant/vagrant-image/Vagrantfile
+++ b/vagrant/vagrant-image/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
   box = "ubuntu/focal64"
   name = "vm"
   domain = "io"
-  memory = "8192" # 1024
+  memory = "4096" # 1024, 4096, 8192
   cpus = "4"
   ip_prefix = "192.168.33"
   machines = *(11..11)
@@ -31,7 +31,6 @@ Vagrant.configure("2") do |config|
       # config.vm.network :forwarded_port, guest: "4222", host: "422#{i}", host_ip: "0.0.0.0", auto_correct: true
       # config.vm.network :forwarded_port, guest: "4222", host: "422#{i}", host_ip: "0.0.0.0", auto_correct: true
 
-
       config.ssh.username = "vagrant"
       machine.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/id_rsa.pub"
       machine.vm.provision "shell", inline: "cat ~vagrant/.ssh/id_rsa.pub >> ~vagrant/.ssh/authorized_keys"
@@ -47,10 +46,10 @@ Vagrant.configure("2") do |config|
       #### and use: vagrant up --provision
 
       # main dev tools
-      machine.vm.provision "shell", path: "tools/docker.sh"
-      machine.vm.provision "shell", path: "tools/qemu.sh"
-      machine.vm.provision "shell", path: "tools/rust.sh"
-      machine.vm.provision "shell", path: "tools/golang.sh", privileged: true
+      # machine.vm.provision "shell", path: "tools/docker.sh"
+      # machine.vm.provision "shell", path: "tools/qemu.sh"
+      # machine.vm.provision "shell", path: "tools/rust.sh"
+      # machine.vm.provision "shell", path: "tools/golang.sh", privileged: true
 
       # machine.vm.provision "shell", path: "tools/packages.sh"
       # machine.vm.provision "shell", path: "tools/k3s.sh"
