--- a/vagrant/scripts/bash.conf
+++ b/vagrant/scripts/bash.conf
@@ -116,10 +116,6 @@ if ! shopt -oq posix; then
   fi
 fi
 
-# used if Go is installed
-#export GOPATH=$HOME/.go
-#export GOBIN=$GOPATH/bin
-#export PATH=$PATH:/usr/local/go/bin:$GOBIN
-
-# used if Rust is installed
-#source $HOME/.cargo/env
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
