--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -20,21 +20,30 @@ Vagrant.configure("2") do |config|
       machine.vm.hostname = "#{name}-#{i}"
       machine.vm.network "private_network", ip: "#{ip_prefix}.#{i}"
 
+      config.ssh.insert_key = false
+      # config.ssh.private_key_path = ".vagrant/machines/\"#{name}-#{i}\"/virtualbox/private_key"
+
       config.vm.network :forwarded_port, guest: 22, guest_ip: "0.0.0.0", host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true
+
       # config.vm.network :forwarded_port, guest: "220#{i}", host: "220#{i}", host_ip: "0.0.0.0", auto_correct: true
       # config.vm.network :forwarded_port, guest: 5432, guest_ip: "0.0.0.0", host: 5432, host_ip: "0.0.0.0", id: "postgres", auto_correct: true
 
-      config.ssh.username = "vagrant"
+      # config.ssh.username = "vagrant"
       machine.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/id_rsa.pub"
       machine.vm.provision "shell", inline: "cat ~vagrant/.ssh/id_rsa.pub >> ~vagrant/.ssh/authorized_keys"
+
+      # machine.vm.provision "file", source: "~/.ssh/id_ed25519.pub", destination: "~/.ssh/id_ed25519.pub"
+      # machine.vm.provision "shell", inline: "cat /home/vagrant/.ssh/id_ed25519.pub >> /home/vagrant/.ssh/authorized_keys"
 
       config.vm.provision "shell", inline: "echo \"127.0.0.1 localhost\n#{ip_prefix}.#{i} #{name}-#{i} #{name}-#{i}.#{domain}\" > /etc/hosts"
       config.vm.provision "shell", inline: "echo \"#{name}-#{i}\" > /etc/hostname"
       config.vm.provision "shell", inline: "touch /home/vagrant/.hushlogin"
+      config.vm.provision "shell", inline: "mkdir -p /home/vagrant/shared && chown vagrant:vagrant /home/vagrant/shared"
 
       machine.vm.provision "file", source: "scripts/bash.conf", destination: "~/.bashrc"
       machine.vm.provision "file", source: "scripts/nano.conf", destination: "~/.nanorc"
       machine.vm.provision "file", source: "scripts/screen.conf", destination: "~/.screenrc"
+
 
       #### Uncomment the shell scripts after the machine is up
       #### vagrant up --provision
@@ -70,7 +79,7 @@ Vagrant.configure("2") do |config|
       # machine.vm.provision "shell", path: "scripts/consul.sh"
       # machine.vm.provision "shell", path: "scripts/python.sh"
 
-      machine.vm.synced_folder "./shared", "/home/vagrant"
+      machine.vm.synced_folder "./shared", "/home/vagrant/shared"
 
       machine.vm.provider "virtualbox" do |vm|
         vm.name = "#{name}-#{i}"
