--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -58,8 +58,8 @@ Vagrant.configure("2") do |config|
       # machine.vm.provision "shell", path: "scripts/podman-cli.sh"
       # machine.vm.provision "shell", path: "scripts/grype-cli.sh"
       # machine.vm.provision "shell", path: "scripts/syft-cli.sh"
-      machine.vm.provision "shell", path: "scripts/zig.sh"
-      machine.vm.provision "shell", path: "scripts/nats.sh"
+      # machine.vm.provision "shell", path: "scripts/zig.sh"
+      # machine.vm.provision "shell", path: "scripts/nats.sh"
       # machine.vm.provision "shell", path: "scripts/redis.sh"
       # machine.vm.provision "shell", path: "scripts/postgres.sh"
       # machine.vm.provision "shell", path: "scripts/nodejs.sh"
@@ -68,7 +68,7 @@ Vagrant.configure("2") do |config|
       # machine.vm.provision "shell", path: "scripts/kubectl.sh"
       # machine.vm.provision "shell", path: "scripts/golang.sh"
       # machine.vm.provision "shell", path: "scripts/k6.sh"
-      machine.vm.provision "shell", path: "scripts/docker.sh"
+      # machine.vm.provision "shell", path: "scripts/docker.sh"
       # machine.vm.provision "shell", path: "scripts/docker-compose.sh"
       # machine.vm.provision "shell", path: "scripts/cloudfoundry.sh"
       # machine.vm.provision "shell", path: "scripts/openshift.sh"
@@ -79,7 +79,7 @@ Vagrant.configure("2") do |config|
       # machine.vm.provision "shell", path: "scripts/consul.sh"
       # machine.vm.provision "shell", path: "scripts/python.sh"
 
-      machine.vm.synced_folder "./shared", "/home/vagrant/shared"
+      # machine.vm.synced_folder "./shared", "/home/vagrant/shared"
 
       machine.vm.provider "virtualbox" do |vm|
         vm.name = "#{name}-#{i}"
