--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,8 +6,8 @@ Vagrant.configure("2") do |config|
   box = "ubuntu/focal64" # 20.04 LTS
   name = "vm"
   domain = "io"
-  memory = "2048" # 1024, 2048, 8192
-  cpus = "1"
+  memory = "4096" # 1024, 2048, 8192
+  cpus = "2"
   ip_prefix = "192.168.33"
   machines = *(11..11)
 
@@ -69,7 +69,7 @@ Vagrant.configure("2") do |config|
       # machine.vm.provision "shell", path: "scripts/kubectl.sh"
       # machine.vm.provision "shell", path: "scripts/golang.sh"
       # machine.vm.provision "shell", path: "scripts/k6.sh"
-      machine.vm.provision "shell", path: "scripts/docker.sh"
+      # machine.vm.provision "shell", path: "scripts/docker.sh"
       # machine.vm.provision "shell", path: "scripts/docker-compose.sh"
       # machine.vm.provision "shell", path: "scripts/cloudfoundry.sh"
       # machine.vm.provision "shell", path: "scripts/openshift.sh"
