--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,11 +3,11 @@
 
 Vagrant.configure("2") do |config|
 
-  box = "ubuntu/focal64" # 20.04 LTS
+  box = "ubuntu/jammy64" # 22.04 LTS (April 2022)
   name = "vm"
   domain = "io"
-  memory = "4096" # 1024, 2048, 8192
-  cpus = "2"
+  memory = "1024" # 1024, 2048, 4094, 8192
+  cpus = "1"
   ip_prefix = "192.168.33"
   machines = *(11..11)
 
@@ -48,7 +48,7 @@ Vagrant.configure("2") do |config|
       #### Uncomment the shell scripts after the machine is up
       #### vagrant up --provision
 
-      #  machine.vm.provision "shell", path: "scripts/packages.sh"
+      # machine.vm.provision "shell", path: "scripts/packages.sh"
       # machine.vm.provision "shell", path: "scripts/jenkins.sh"
       # machine.vm.provision "shell", path: "scripts/pack-cli.sh"
       # machine.vm.provision "shell", path: "scripts/pulumi-cli.sh"
@@ -59,8 +59,8 @@ Vagrant.configure("2") do |config|
       # machine.vm.provision "shell", path: "scripts/grype-cli.sh"
       # machine.vm.provision "shell", path: "scripts/syft-cli.sh"
       # machine.vm.provision "shell", path: "scripts/zig.sh"
-      #  machine.vm.provision "shell", path: "scripts/nats.sh"
-      #  machine.vm.provision "shell", path: "scripts/nats-cli.sh"
+      # machine.vm.provision "shell", path: "scripts/nats.sh"
+      # machine.vm.provision "shell", path: "scripts/nats-cli.sh"
       # machine.vm.provision "shell", path: "scripts/redis.sh"
       # machine.vm.provision "shell", path: "scripts/postgres.sh"
       # machine.vm.provision "shell", path: "scripts/nodejs.sh"
