--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -8,20 +8,25 @@ Vagrant.configure("2") do |config|
   domain = "io"
   memory = "1024" # 1024, 2048, 4094, 8192
   cpus = "1"
-  ip_prefix = "192.168.33"
-  machines = *(11..11)
+  ip_prefix = "56" # use prefix "33" in MacOS, "56" in Linux
+  ip_range_start = "11"
+  ip_range_end = "11"
+  machines = *(ip_range_start..ip_range_end)
 
   machines.each do |i|
     config.vm.define "#{name}-#{i}" do |machine|
 
+      ip = "192.168.#{ip_prefix}.#{i}"
+      hostname = "#{name}-#{i}"
+      
       machine.vm.box = "#{box}"
       machine.vm.box_check_update = false
 
-      machine.vm.hostname = "#{name}-#{i}"
-      machine.vm.network "private_network", ip: "#{ip_prefix}.#{i}"
+      machine.vm.hostname = "#{hostname}"
+      machine.vm.network "private_network", ip: "#{ip}"
 
       config.ssh.insert_key = false
-      # config.ssh.private_key_path = ".vagrant/machines/\"#{name}-#{i}\"/virtualbox/private_key"
+      # config.ssh.private_key_path = ".vagrant/machines/\"#{hostname}\"/virtualbox/private_key"
 
       config.vm.network :forwarded_port, guest: 22, guest_ip: "0.0.0.0", host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true
 
@@ -35,13 +40,17 @@ Vagrant.configure("2") do |config|
       machine.vm.provision "file", source: "~/.ssh/id_ed25519.pub", destination: "~/.ssh/id_ed25519.pub"
       machine.vm.provision "shell", inline: "cat /home/vagrant/.ssh/id_ed25519.pub >> /home/vagrant/.ssh/authorized_keys"
 
-      config.vm.provision "shell", inline: "echo \"127.0.0.1 localhost\n#{ip_prefix}.#{i} #{name}-#{i} #{name}-#{i}.#{domain}\" > /etc/hosts"
-      config.vm.provision "shell", inline: "echo \"#{name}-#{i}\" > /etc/hostname"
+      config.vm.provision "shell", inline: "echo \"127.0.0.1 localhost\n#{ip} #{hostname} #{hostname}.#{domain}\" > /etc/hosts"
+      config.vm.provision "shell", inline: "echo \"#{hostname}\" > /etc/hostname"
       config.vm.provision "shell", inline: "touch /home/vagrant/.hushlogin && chown vagrant:vagrant /home/vagrant/.hushlogin"
-      config.vm.provision "shell", inline: "mkdir -p /home/vagrant/shared && chown vagrant:vagrant /home/vagrant/shared"
+      
+      # Uncomment these lines if you are sharing a local folder
+      # config.vm.provision "shell", inline: "mkdir -p /home/vagrant/shared && chown vagrant:vagrant /home/vagrant/shared"
+      # machine.vm.synced_folder "./shared", "/home/vagrant/shared"
 
       machine.vm.provision "file", source: "scripts/bash.conf", destination: "~/.bashrc"
       machine.vm.provision "file", source: "scripts/nano.conf", destination: "~/.nanorc"
+      machine.vm.provision "file", source: "scripts/vim.conf", destination: "~/.vimrc"
       machine.vm.provision "file", source: "scripts/screen.conf", destination: "~/.screenrc"
 
 
@@ -80,14 +89,13 @@ Vagrant.configure("2") do |config|
       # machine.vm.provision "shell", path: "scripts/consul.sh"
       # machine.vm.provision "shell", path: "scripts/python.sh"
 
-      # machine.vm.synced_folder "./shared", "/home/vagrant/shared"
-
       machine.vm.provider "virtualbox" do |vm|
-        vm.name = "#{name}-#{i}"
+        vm.name = "#{hostname}"
         vm.gui = false
         vm.cpus = "#{cpus}"
         vm.memory = "#{memory}"
         vm.customize ['modifyvm', :id, '--nested-hw-virt', 'on']
+        vm.check_guest_additions = false
       end
     end
   end
