--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -53,7 +53,6 @@ Vagrant.configure("2") do |config|
       machine.vm.provision "file", source: "scripts/vim.conf", destination: "~/.vimrc"
       machine.vm.provision "file", source: "scripts/screen.conf", destination: "~/.screenrc"
 
-
       #### Uncomment the shell scripts after the machine is up
       #### vagrant up --provision
 
@@ -88,7 +87,7 @@ Vagrant.configure("2") do |config|
       # machine.vm.provision "shell", path: "scripts/nomad.sh"
       # machine.vm.provision "shell", path: "scripts/consul.sh"
       # machine.vm.provision "shell", path: "scripts/python.sh"
-      machine.vm.provision "shell", path: "scripts/gcc.sh"
+      # machine.vm.provision "shell", path: "scripts/gcc.sh"
 
       machine.vm.provider "virtualbox" do |vm|
         vm.name = "#{hostname}"
