updated vagrant scripts

--- a/vagrant/scripts/bash.conf
+++ b/vagrant/scripts/bash.conf
@@ -83,9 +83,6 @@ if [ -x /usr/bin/dircolors ]; then
     alias egrep='egrep --color=auto'
 fi
 
-# colored GCC warnings and errors
-export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
-
 # some more ls aliases
 alias ll='ls -alFh'
 alias la='ls -Ah'
@@ -115,39 +112,11 @@ if ! shopt -oq posix; then
   fi
 fi
 
+# colored GCC warnings and errors
+export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
+
 # Set Default Editor (change 'Nano' to the editor of your choice)
 export EDITOR=/usr/bin/nano
-
-# mans:   Search manpage given in agument '1' for term given in argument '2' (case insensitive)
-#         displays paginated result with colored search terms and two lines surrounding each hit.
-mans () { man $1 | grep -iC2 --color=always $2 | less }
-
-# cleaning scripts
-alias cleanDS="find . -type f -name '*.DS_Store' -ls -delete"
-alias cleanVS="find . -name '.vscode' -type d -exec rm -vrf {} +"
-alias cleanIDEA="find . -name '.idea' -type d -exec rm -vrf {} +"
-alias cleanNPM="find . -name 'node_modules' -type d -exec rm -vrf {} + && find . -type f -name 'package-lock.json' -ls -delete"
-alias cleanGIT="find . -name '.git' -type d -exec rm -vrf {} +"
-alias cleanAll="cleanDS && cleanVS && cleanIDEA && cleanNPM"
-
-# python, utils, etc
-alias c='echo -e "" && bat -p'
-alias curl='curl -s'
-alias grep='grep --color=auto'
-alias ns='sudo lsof -i -n -P | grep TCP'
-alias search="grep -r -wine "
-alias python=python3
-alias pip=pip3
-alias k=kubectl
-
-# ffmpeg tools
-alias ffmpeg='ffmpeg -hide_banner'
-alias ffplay='ffplay -hide_banner -autoexit'
-alias ffprobe='ffprobe -hide_banner'
-
-# git scripts
-g() { git fetch --all --prune && git pull }
-tig() { git add -A && git commit -m "$1" && git push }
 
 # cat/bat tool
 export BAT_THEME="Monokai Extended Bright"
@@ -155,6 +124,42 @@ export BAT_THEME="Monokai Extended Bright"
 # configure number of threads for OpenMP
 export OMP_NUM_THREADS=8
 
+# NVM nodejs tool
 export NVM_DIR="$HOME/.nvm"
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
 [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+
+# python, utils, etc
+alias fl='du -hsx * | sort | head -50'
+alias cp='cp -iv'
+alias mv='mv -iv'
+alias c="echo -e "" && batcat -p"
+alias curl="curl -s"
+alias grep="grep --color=auto"
+alias ns="sudo lsof -i -n -P | grep TCP"
+alias search="grep -r -wine "
+alias python="python3"
+alias pip="pip3"
+alias k="kubectl"
+
+# ffmpeg tools
+alias ffmpeg="ffmpeg -hide_banner"
+alias ffplay="ffplay -hide_banner -autoexit"
+alias ffprobe="ffprobe -hide_banner"
+
+# cleaning scripts
+alias cleanVS="find . -name '.vscode' -type d -exec rm -vrf {} +"
+alias cleanIDEA="find . -name '.idea' -type d -exec rm -vrf {} +"
+alias cleanNPM="find . -name 'node_modules' -type d -exec rm -vrf {} + && find . -type f -name 'package-lock.json' -ls -delete"
+alias cleanGIT="find . -name '.git*' -type d -exec rm -vrf {} +"
+alias cleanAll="cleanDS && cleanVS && cleanIDEA && cleanNPM"
+
+# GIT function to fetch all branches and pull the current
+g() {
+  git fetch --all --prune && git pull
+}
+
+# GIT function add, commit and push the current code
+tig() {
+  git add -A && git commit -m "$1" && git push
+}
