--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,7 +3,7 @@
 
 Vagrant.configure("2") do |config|
 
-  box = "ubuntu/jammy64" # 22.04 LTS (April 2022)
+  box = "ubuntu/mantic64" # 24.04 LTS (April 2036)
   name = "vm"
   domain = "io"
   memory = "4094" # 1024, 2048, 4094, 8192
@@ -56,6 +56,7 @@ Vagrant.configure("2") do |config|
       #### Uncomment the shell scripts after the machine is up
       #### vagrant up --provision
 
+      machine.vm.provision "shell", path: "scripts/dev.sh"
       # machine.vm.provision "shell", path: "scripts/packages.sh"
       # machine.vm.provision "shell", path: "scripts/jenkins.sh"
       # machine.vm.provision "shell", path: "scripts/pack-cli.sh"
