--- a/vagrant/scripts/bash.conf
+++ b/vagrant/scripts/bash.conf
@@ -133,7 +133,7 @@ export NVM_DIR="$HOME/.nvm"
 alias fl='du -hsx * | sort | head -50'
 alias cp='cp -iv'
 alias mv='mv -iv'
-alias c="echo -e "" && batcat -p"
+alias cat="echo -e "" && batcat -p"
 alias curl="curl -s"
 alias grep="grep --color=auto"
 alias ns="sudo lsof -i -n -P | grep TCP"
