--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,11 +3,11 @@
 
 Vagrant.configure("2") do |config|
 
-  box = "ubuntu/mantic64" # 24.04 LTS (April 2036)
+  box = "ubuntu/jammy64" # 22.04 LTS
   name = "vm"
   domain = "io"
   memory = "4094" # 1024, 2048, 4094, 8192
-  cpus = "4"
+  cpus = "2"
   ip_prefix = "33" # use prefix "33" in MacOS, "56" in Linux
   ip_range_start = "11"
   ip_range_end = "11"
@@ -46,7 +46,7 @@ Vagrant.configure("2") do |config|
 
       # Uncomment these lines if you are sharing a local folder
       # config.vm.provision "shell", inline: "mkdir -p /home/vagrant/shared && chown vagrant:vagrant /home/vagrant/shared"
-      machine.vm.synced_folder "./shared", "/home/vagrant/repos"
+      # machine.vm.synced_folder "./shared", "/home/vagrant/repos"
 
       machine.vm.provision "file", source: "scripts/bash.conf", destination: "~/.bashrc"
       machine.vm.provision "file", source: "scripts/nano.conf", destination: "~/.nanorc"
@@ -56,7 +56,7 @@ Vagrant.configure("2") do |config|
       #### Uncomment the shell scripts after the machine is up
       #### vagrant up --provision
 
-      machine.vm.provision "shell", path: "scripts/dev.sh"
+      # machine.vm.provision "shell", path: "scripts/dev.sh"
       # machine.vm.provision "shell", path: "scripts/packages.sh"
       # machine.vm.provision "shell", path: "scripts/jenkins.sh"
       # machine.vm.provision "shell", path: "scripts/pack-cli.sh"
