--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -44,7 +44,7 @@ Vagrant.configure("2") do |config|
 
       # config.vm.network :forwarded_port, guest: "220#{i}", host: "220#{i}", host_ip: "0.0.0.0", auto_correct: true
       # config.vm.network :forwarded_port, guest: 5432, guest_ip: "0.0.0.0", host: 5432, host_ip: "0.0.0.0", id: "postgres", auto_correct: true
-      # config.vm.network :forwarded_port, guest: 3306, guest_ip: "0.0.0.0", host: 3306, host_ip: "0.0.0.0", id: "mariadb", auto_correct: true
+      config.vm.network :forwarded_port, guest: 3306, guest_ip: "0.0.0.0", host: 3306, host_ip: "0.0.0.0", id: "mariadb", auto_correct: true
 
       # config.ssh.username = "vagrant"
       # machine.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/id_rsa.pub"
@@ -69,6 +69,7 @@ Vagrant.configure("2") do |config|
       #### Uncomment the shell scripts after the machine is up
       #### vagrant up --provision
 
+      # machine.vm.provision "shell", path: "scripts/mariadb.sh"
       # machine.vm.provision "shell", path: "scripts/dev.sh"
       # machine.vm.provision "shell", path: "scripts/packages.sh"
       # machine.vm.provision "shell", path: "scripts/jenkins.sh"
