--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,6 +1,12 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+# set via ENV variables or use defaults
+name = ENV['NAME'] || "vm"
+domain = ENV['DOMAIN'] || "io"
+memory = ENV['MEMORY'] || "1024" # 1024, 2048, 4094, 8192
+cpus = ENV['CPUS'] || "1"
+
 Vagrant.configure("2") do |config|
 
   # select box based on the current processor architecture
@@ -11,11 +17,6 @@ Vagrant.configure("2") do |config|
     # works on Intel
     box = "ubuntu/jammy64"
   end
-
-  name = "vm"
-  domain = "io"
-  memory = "1024" # 1024, 2048, 4094, 8192
-  cpus = "1"
 
   ip_prefix = "33" # use prefix "33" in MacOS, "56" in Linux
   ip_range_start = "11"
@@ -56,6 +57,7 @@ Vagrant.configure("2") do |config|
       config.vm.provision "shell", inline: "echo \"127.0.0.1 localhost\n#{ip} #{hostname} #{hostname}.#{domain}\" > /etc/hosts"
       config.vm.provision "shell", inline: "echo \"#{hostname}\" > /etc/hostname"
       config.vm.provision "shell", inline: "touch /home/vagrant/.hushlogin && chown vagrant:vagrant /home/vagrant/.hushlogin"
+      config.vm.provision "shell", inline: "mkdir -p /home/vagrant/.config/pip && echo -e \"[global]\nbreak-system-packages = true\n\" > /home/vagrant/.config/pip/pip.conf && chown -R vagrant:vagrant /home/vagrant/.config"
 
       # Uncomment these lines if you are sharing a local folder
       # config.vm.provision "shell", inline: "mkdir -p /home/vagrant/shared && chown vagrant:vagrant /home/vagrant/shared"
