--- a/ghostty/config
+++ b/ghostty/config
@@ -1,14 +1,18 @@
 # ghostty +list-fonts
+maximize = true
 font-family = SF Mono Bold
 copy-on-select = clipboard
 cursor-style-blink = true
 background = #000
-font-size = 20
+font-size = 18
 unfocused-split-fill = #000
 unfocused-split-opacity = 1
 split-divider-color = grey
 right-click-action = paste
 theme = 0x96f
+macos-titlebar-proxy-icon = hidden
+title = " "
+confirm-close-surface = false
 
 # theme = 0x96f
 # theme = Atom
